--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "egeloen/ckeditor-bundle": "2.1.*",
         "php": ">=5.3.0",
         "symfony/framework-bundle": ">=2.1",
-        "ckfinder/ckfinder": "dev-master"
+        "jonlil/ckfinder": "dev-master"
     },
     "repositories": [
         {"type": "vcs", "url": "https://github.com/jonlil/ckfinder"}
