--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,8 @@
         "egeloen/ckeditor-bundle": "2.1.*",
         "php": ">=5.3.0",
         "symfony/framework-bundle": ">=2.1",
-        "jonlil/ckfinder": "dev-master"
+        "jonlil/ckfinder": "2.3.1"
     },
-    "repositories": [
-        {"type": "vcs", "url": "https://github.com/jonlil/ckfinder"}
-    ],
     "autoload": {
         "psr-0": { "Jonlil\\CKFinderBundle": "" }
     },
