--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,6 @@
     "autoload": {
         "psr-0": { "Jonlil\\CKFinderBundle": "" }
     },
-    "target-dir": "Jonlil/CKFinderBundle"
+    "target-dir": "Jonlil/CKFinderBundle",
+    "version": "0.0.1"
 }
