Change name of repo to be able to install the fork with composer

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jonlil/ckfinder-bundle",
+    "name": "raziel057/ckfinder-bundle",
     "type": "symfony-bundle",
     "description": "",
     "keywords": ["CKFinder", "CKEditor"],
